--- a/index.html
+++ b/index.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
 <head>
-  <title>Louisa Barrett</title>
+  <title>Mark Tobin</title>
   <meta charset="utf-8">
   <link href="main.css" media="screen" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Gudea">
-  <link rel="shortcut icon" href="http://faviconist.com/icons/f9294cc2281f1004e846adbea5f4b316/favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
 <body>
   <header class="header-details">
-    <h1 class="name">Louisa Barrett | </h1>
+    <h1 class="name">Mark Tobin | </h1>
       <article class="links-container">
-        <a class="links" href="https://github.com/LouisaBarrett" target="_blank"><img src="./images/gh_icon.png" alt="github icon" width="21" height="21">GitHub</a>
-        <a class="links" href="https://www.linkedin.com/in/louisabarrett/" target="_blank"><img src="./images/in_icon.png" alt="linkedin icon" width="18" height="18">LinkedIn</a>
+        <a class="links" href="https://github.com/marco-t" target="_blank"><img src="./images/gh_icon.png" alt="github icon" width="21" height="21">GitHub</a>
+        <a class="links" href="https://ca.linkedin.com/in/mpatobin" target="_blank"><img src="./images/in_icon.png" alt="linkedin icon" width="18" height="18">LinkedIn</a>
       </article><br>
       <article class="contact-information">
-        <p class="contact-deets">P.O. Box 384 | </p>
-        <p class="contact-deets">Mead, CO 80542 | </p>
-        <p class="contact-deets">ph: 505.660.9495 | </p>
-        <a class="links" href="mailto:louisabarrett@gmail.com">e: louisabarrett@gmail.com</a>
+        <p class="contact-deets">Gander, NL, Canada | </p>
+        <p class="contact-deets">ph: 709.693.2063 | </p>
+        <a class="links" href="mailto:mpatobin@gmail.com">e: mpatobin@gmail.com</a>
       </article>
   </header>
   <section class="content">
     <h2 class="category-headers">Summary</h2><hr>
-      <p class="category-description-main">Developer with 6 months of programming experience and seven years as a graphic designer coordinating with local and remote teams on multiple, simultaneous projects: driven to discover creative, clear solutions for back- and front-end problems and a great interest in UX/UI.</p>
-    <h2 class="category-headers">Education</h2><hr>
-      <p class="primary-titles">Galvanize gSchool | <span class="location">Denver, CO</span></p>
-      <p class="category-details">6-month intensive Ruby on Rails developer training program emphasizing TDD and pair programming<br>September 2013–February 2014</p>
-      <p class="primary-titles">Kansas City Art Institute | <span class="location">Kansas City, MO</span></p>
-      <p class="category-details">BFA, Graphic Design<br>Dean's List 2004–2007<br>2007</p>
+      <p class="category-description-main">I am a Developer seeking a position as a Junior Web Developer. I have experience working with Ruby, Ruby on Rails, HTML, CSS as well as testing tools such as RSpec and Capybara.</p>
+
+      <p class="category-description-main">I believe in writing clear and concise code that is easily maintained and well tested. I’m a proponent of BDD and designing simple software that only does what the user needs it to do. “Wouldn’t it be cool if…” features should remain a fantasy if they do not obviously enhance the user’s experience or productivity.</p>
+
+      <p class="category-description-main">Some of my personal development projects include a fundraising website for a non-profit, a link aggregator and an events calendar for professionals seeking continuing education.</p>
+
+    <h2 class="category-headers">Deployed Websites</h2><hr>
+      <a class="primary-titles" href="http://www.refugeeoutreach.ca" target="_blank">Gander Refugee Outreach | <p class="links">http://www.refugeeoutreach.ca</p></a>
+      <p class="category-description">A community group that is sponsoring six Syrian refugee families to move to Canada. This site has helped collect thousands of dollars in donations.</p>
+
+      <a class="primary-titles" href="https://sunwise.herokuapp.com" target="_blank">Sunwise News | <p class="links">https://sunwise.herokuapp.com</p></a>
+      <p class="category-description">A link aggregator focused on environmental sustainability and Permaculture Design. Features include user authentication, submitting links or discussions, voting, ranking and commenting. Pardon the slow start up as it's on a free Heroku dyno.</p>
+
     <h2 class="category-headers">Code</h2><hr>
-      <a class="primary-titles" href="http://github.com/LouisaBarrett/SocialSmarts" target="_blank">Social Smarts | <p class="links">github.com/LouisaBarrett/SocialSmarts</p></a>
-      <p class="category-description">As part of a five-person team and using the Twitter and Klout APIs, created a social media management app that allows a user to process incoming tweets based on various criteria. Primary role was designing and building the front-end from scratch, emphasizing a straightforward and simple experience for the user</p>
-      <a class="primary-titles" href="https://github.com/LouisaBarrett/fundit" target="_blank">FundIt | <p class="links">github.com/LouisaBarrett/fundit</p></a>
-      <p class="category-description">A small, solo project creating a fund-raising site built to practice using Ruby, Rails and RSpec.</p>
-      <a class="primary-titles" href="https://github.com/LouisaBarrett/checkers" target="_blank">Checker Board | <p class="links">github.com/LouisaBarrett/checkers</p></a>
-      <p class="category-description">Practicing Ruby fundamentals by building a game-board for a game of checkers.</p>
-      <a class="primary-titles" href="https://github.com/LouisaBarrett/command-query_practice" target="_blank">Command Query | <p class="links">github.com/LouisaBarrett/command-query_practice</p></a>
-      <p class="category-description">Solutions to a series of kata-like tests practicing how objects change in Ruby</p>
-      <a class="primary-titles" href="https://github.com/LouisaBarrett/resume" target="_blank">Résumé | <p class="links">github.com/LouisaBarrett/resume</p></a>
-      <p class="category-description">Take a look under the hood of this page on GitHub (or see the PDF print version <a class="links" href="http://f.cl.ly/items/2D2S2u0L0Z2B3x0o3X1Y/LouisaBarrett_resume.pdf" target="_blank">here</a>). Constructive feedback is always welcome and appreciated.</p>
-    <h2 class="category-headers">Professional Experience</h2><hr>
-      <p class="primary-titles">ECOS Communications | <span class="location">Boulder, CO</span></p>
-        <p class="category-details">Senior Graphic Designer, museum and exhibit graphics<br>2008–Fall 2013</p>
-        <p class="category-description">Graphic Design project lead: responsible for the creation, development and production management of large- and small-scale cultural history and conservation education projects for a range of clients and uses.</p>
-      <p class="primary-titles">Hero Design Studio | <span class="location">Denver, CO</span></p>
-        <p class="category-details">Contract Production Artist<br>Fall 2008</p>
-      <p class="primary-titles">Archetype 5 | <span class="location">Boulder, CO</span></p>
-        <p class="category-details">Graphic Designer<br>2007–2008</p>
-      <p class="primary-titles">Workshop Design, Inc. | <span class="location">Kansas City, MO</span></p>
-        <p class="category-details">Intern, print and environmental design<br>2006</p>
+      <a class="primary-titles" href="https://github.com/marco-t/eyedocket" target="_blank">eyeDocket | <p class="links">https://github.com/marco-t/eyedocket</p></a>
+      <p class="category-description">A web app that gives professionals an instant view of upcoming continuing education courses. Written with the intent of improving my testing skills with Capybara.</p>
+
+      <a class="primary-titles" href="https://github.com/marco-t/onetwenys" target="_blank">onetwenys | <p class="links">https://github.com/marco-t/onetwenys</p></a>
+      <p class="category-description">A popular card game from in Atlantic Canada for the console. Created to improve my Ruby code writing, particularly the use of arrays and hashes.</p>
+  </section>
+  <section class="credit">
+    <p>Resume template forked from <a href="https://github.com/LouisaBarrett/resume" target="_blank">https://github.com/LouisaBarrett/resume</a></p>
   </section>
 </body>
