--- a/index.html
+++ b/index.html
@@ -30,26 +30,24 @@
       </article>
   </header>
   <section class="content">
-    <h2 class="category-headers">Summary</h2><hr>
-      <p class="category-description-main">I am a Developer seeking a position as a Junior Web Developer. I have experience working with Ruby, Ruby on Rails, HTML, CSS as well as testing tools such as RSpec and Capybara.</p>
-
-      <p class="category-description-main">I believe in writing clear and concise code that is easily maintained and well tested. I’m a proponent of BDD and designing simple software that only does what the user needs it to do. “Wouldn’t it be cool if…” features should remain a fantasy if they do not obviously enhance the user’s experience or productivity.</p>
-
-      <p class="category-description-main">Some of my personal development projects include a fundraising website for a non-profit, a link aggregator and an events calendar for professionals seeking continuing education.</p>
-
     <h2 class="category-headers">Deployed Websites</h2><hr>
-      <a class="primary-titles" href="http://www.refugeeoutreach.ca" target="_blank">Gander Refugee Outreach | <p class="links">http://www.refugeeoutreach.ca</p></a>
-      <p class="category-description">A community group that is sponsoring six Syrian refugee families to move to Canada. This site has helped collect thousands of dollars in donations.</p>
+    <a class="primary-titles" href="http://www.refugeeoutreach.ca" target="_blank">Gander Refugee Outreach | <p class="links">http://www.refugeeoutreach.ca</p></a>
+    <p class="category-description">A community group that is sponsoring seven Syrian refugee families to move to Canada. This site has helped collect ~$100k in donations.</p>
 
-      <a class="primary-titles" href="https://sunwise.herokuapp.com" target="_blank">Sunwise News | <p class="links">https://sunwise.herokuapp.com</p></a>
-      <p class="category-description">A link aggregator focused on environmental sustainability and Permaculture Design. Features include user authentication, submitting links or discussions, voting, ranking and commenting. Pardon the slow start up as it's on a free Heroku dyno.</p>
+    <a class="primary-titles" href="https://sunwise.herokuapp.com" target="_blank">Sunwise News | <p class="links">https://sunwise.herokuapp.com</p></a>
+    <p class="category-description">A link aggregator focused on environmental sustainability and Permaculture Design. Features include user authentication, submitting links or discussions, voting, ranking and commenting. Pardon the slow start up as it's on a free Heroku dyno.</p>
 
     <h2 class="category-headers">Code</h2><hr>
-      <a class="primary-titles" href="https://github.com/marco-t/eyedocket" target="_blank">eyeDocket | <p class="links">https://github.com/marco-t/eyedocket</p></a>
-      <p class="category-description">A web app that gives professionals an instant view of upcoming continuing education courses. Written with the intent of improving my testing skills with Capybara.</p>
+    <a class="primary-titles" href="https://github.com/marco-t/onetwenys" target="_blank">onetwenys | <p class="links">https://github.com/marco-t/onetwenys</p></a>
+    <p class="category-description">A popular card game from in Atlantic Canada for the console. Written to practice object oriented design and writing tests.</p>
 
-      <a class="primary-titles" href="https://github.com/marco-t/onetwenys" target="_blank">onetwenys | <p class="links">https://github.com/marco-t/onetwenys</p></a>
-      <p class="category-description">A popular card game from in Atlantic Canada for the console. Created to improve my Ruby code writing, particularly the use of arrays and hashes.</p>
+    <h2 class="category-headers">Education</h2><hr>
+    <span class="primary-titles">Niagara College | <p class="links">Niagara on the Lake, ON</p></span>
+    <p class="category-description">Brewmaster & Brewery Operations Management</p>
+    <p class="category-description"></p>
+
+    <span class="primary-titles">Memorial University | <p class="links">St. John's, NL</p></span>
+    <p class="category-description">Bachelor of Science (Hons.), Chemistry</p>
   </section>
   <section class="credit">
     <p>Resume template forked from <a href="https://github.com/LouisaBarrett/resume" target="_blank">https://github.com/LouisaBarrett/resume</a></p>
